Topic Inside and list

--- a/GhasreMobile/Views/Forum/ForumView.cshtml
+++ b/GhasreMobile/Views/Forum/ForumView.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@model VmTopic
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["id"] = Model.TopicId;
 }
 
 @section Styles{
@@ -23,39 +24,36 @@
 </nav>
 
 <div class="forum-block">
-    <div class="content">
+    <form asp-action="SubmitComment" asp-controller="Forum" class="content">
         <div class="rowr">
-            <h5>نام این پست یا همان تاپیک</h5>
+            <h5>@Model.Title</h5>
             <div class="rowr uk-margin-auto-right">
-                <span class="uk-margin-small-left text-2">مهتاب دادسرشت</span>
-                <span class="text-2">1399/01/05</span>
+                <span class="uk-margin-small-left text-2">@Model.Client.Name</span>
+                <span class="text-2">@(Model.DateCreated.HasValue ? Model.DateCreated.Value.DateToShamsi() : "")</span>
             </div>
         </div>
         <div class="forum-body" uk-lightbox>
-            <a class="image-container" href="~/st/r/ads/a4.jpg">
-                <img src="~/st/r/ads/a4.jpg" alt="" />
-            </a>
             <p dir="rtl">
-                می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است.
+                @Model.Body
             </p>
             <div class="fg-col uk-margin-medium-top">
-                <textarea class="entry" placeholder="نظر شما..."></textarea>
+                <textarea name="comment" class="entry" placeholder="نظر شما..."></textarea>
             </div>
         </div>
         <div class="action uk-margin-small-top">
             <span class="row uk-margin-auto-top">
                 <span uk-icon="ratio:.8;icon:chatbox-ellipses-outline"></span>
-                <span> 13 </span>
+                <span> @Model.Comments.Count </span>
             </span>
             <a class="link-text  uk-margin-auto-top" href="" uk-icon="ratio:.8;icon:arrow-redo-outline"></a>
             <button class="btn btn-dashed uk-margin-auto-top uk-margin-auto-left">ثبت نظر</button>
         </div>
-    </div>
+    </form>
     <div class="controls">
         <div class="col">
-            <button class="link-text" uk-icon="chevron-up"></button>
-            <label>432</label>
-            <button class="link-text" uk-icon="chevron-down"></button>
+            <button class="link-text" uk-icon="chevron-up" onclick="VoteUp(@Model.TopicId);"></button>
+            <label>@Model.VoteCount</label>
+            <button class="link-text" uk-icon="chevron-down" onclick="VoteDown(@Model.TopicId);"></button>
         </div>
     </div>
 </div>
@@ -93,13 +91,43 @@
         </div>
     </form>
 </div>
+@section Scripts{
+    <script src="~/js/BjaxLib.js"></script>
 
-<script>
-    function reply(commentId) {
-        // آیدی کامنتی که بهش پاسخ داریم میدیم رو میزارم تو یه اینپوت
-        const input = document.getElementById('CommentId');
-        input.value = commentId;
+    <script>
+        function reply(commentId) {
+            // آیدی کامنتی که بهش پاسخ داریم میدیم رو میزارم تو یه اینپوت
+            const input = document.getElementById('CommentId');
+            input.value = commentId;
 
-        UIkit.modal(document.getElementById('ModalReply')).show();
-    }
-</script>
+            UIkit.modal(document.getElementById('ModalReply')).show();
+        }
+    </script>
+
+    <script>
+        $.get('https://www.cloudflare.com/cdn-cgi/trace',
+            function (data) {
+                console.log(data);
+                console.log(data.split('ip=')[1].split('ts')[0]);
+            });
+        function VoteUp(val) {
+            var result = Bjax("/Forum/VoteUp?id=", val, "SP");
+            if (result) {
+                var vote = document.getElementById('Vote' + val);
+                vote.innerText = parseInt(vote.innerText) + 1;
+            } else {
+                window.location = "";
+            }
+        }
+        function VoteDown(val) {
+            var result = Bjax("/Forum/VoteDown?id=", val, "SP");
+            if (result) {
+                var vote = document.getElementById('Vote' + val);
+                vote.innerText = parseInt(vote.innerText) - 1;
+            } else {
+                window.location = "";
+            }
+        }
+    </script>
+
+}
