--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
-                                    <i uk-icon="basket"></i>
+                                    <i uk-icon="cart"></i>
                                 </span>
                                 <span class="title">سفارشات</span>
                                 <span class="arrow" uk-icon="chevron-forward">
@@ -144,7 +144,7 @@
                                 <li class="nav-item active">
                                     <a href="/Admin/Order" class="LoadingDiv">
                                         <span class="icon-holder">
-                                            <i uk-icon="swap-vertical"></i>
+                                            <i uk-icon="desktop-outline"></i>
                                         </span>
                                         <span class="title">سفارشات سایت</span>
                                     </a>
@@ -152,9 +152,9 @@
                                 <li class="nav-item active">
                                     <a href="/Admin/OnlineOrder" class="LoadingDiv">
                                         <span class="icon-holder">
-                                            <i uk-icon="log-in"></i>
+                                            <i uk-icon="basket"></i>
                                         </span>
-                                        <span class="title">سفارشات انلاین</span>
+                                        <span class="title">سفارشات آفلاین</span>
                                     </a>
                                 </li>
                             </ul>
@@ -254,7 +254,7 @@
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
-                                    <i uk-icon="headset-outline"></i>
+                                    <i uk-icon="headset-sharp"></i>
                                 </span>
                                 <span class="title">پشتیبانی</span>
                                 <span class="arrow" uk-icon="chevron-forward">
@@ -264,7 +264,7 @@
                                 <li class="nav-item active">
                                     <a href="/Admin/Ticket" class="LoadingDiv">
                                         <span class="icon-holder">
-                                            <i uk-icon="help-buoy"></i>
+                                            <i uk-icon="headset-outline"></i>
                                         </span>
                                         <span class="title">مرکز پاسخگویی</span>
                                     </a>
@@ -272,9 +272,17 @@
                                 <li class="nav-item active">
                                     <a href="/Admin/Topic" class="LoadingDiv">
                                         <span class="icon-holder">
-                                            <i uk-icon="information"></i>
+                                            <i uk-icon="clipboard"></i>
                                         </span>
                                         <span class="title">تاپیک</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/RegularQuestion" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="help-circle"></i>
+                                        </span>
+                                        <span class="title">سوالات متداول</span>
                                     </a>
                                 </li>
                             </ul>
