--- a/GhasreMobile/Areas/Admin/Views/Client/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Client/Components/Edit.cshtml
@@ -18,7 +18,7 @@
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام کاربر</label>
-                <input value="@Model.Name" required name="Name" class="form-control form-control-sm" placeholder="مثال: پیمان معادی">
+                <input value="@Model.Name" required name="Name" class="form-control form-control-sm" placeholder="مثال: علی ایمانی">
             </div>
             <div class="form-group col-md-3">
                 <label>تعیین نقش</label>
