--- a/GhasreMobile/wwwroot/css/pages/user.scss
+++ b/GhasreMobile/wwwroot/css/pages/user.scss
@@ -220,6 +220,43 @@ $aside-width: 142px;
     }
 }
 
+.mini-wallet {
+    @include border-radius(8px,8px,8px,8px);
+    @include column;
+    @include shadow-medium;
+    padding: 10px;
+    min-width: 110px;
+    cursor: pointer;
+    //-
+    background: rgb(255,100,156);
+    background: -moz-linear-gradient(45deg, rgba(255,100,156,1) 0%, rgba(150,10,150,1) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(255,100,156,1) 0%, rgba(150,10,150,1) 100%);
+    background: linear-gradient(45deg, rgba(255,100,156,1) 0%, rgba(150,10,150,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff649c",endColorstr="#960a96",GradientType=1);
+
+    * {
+        cursor: pointer;
+        color: #fff;
+    }
+
+    label {
+        margin-bottom: 4px;
+        font-size: 12px;
+        margin-left: auto;
+    }
+
+    span {
+        font-size: 18px;
+
+        span {
+            margin-top: auto;
+            font-size: 9px;
+            margin-right: 3px;
+            margin-bottom: 3px;
+        }
+    }
+}
+
 .cart {
     @include column;
 
