--- a/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
@@ -94,6 +94,11 @@
                 $(".modal-content").html(result);
             });
         }
+
+        function BtnSearch() {
+            window.location.href = "/Admin/OnlineOrder?TelNo=" + $("#SearchInputUserPhone").val();
+        }
+
     </script>
 
 }
