--- a/GhasreMobile/Areas/Admin/Views/RegularQuestion/Components/RegularQuestionInfo.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/RegularQuestion/Components/RegularQuestionInfo.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblRegularQuestion
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         پرسش و پاسخ
     </h6>
@@ -10,13 +11,13 @@
     <div class="form-group">
         <label class="mr-1">پرسش:</label>
         <div class="bg-purple p-3 uk-border-rounded">
-            از آنجا که لورم ایپسوم، شباهت زیادی به متن های واقعی دارد، طراحان معمولا از لورم ایپسوم استفاده میکنند تا فقط به مشتری یا کار فرما نشان دهند که قالب طراحی شده بعد از اینکه متن در آن قرار میگرد چگونه خواهد بود و فونت ها و اندازه ها چگونه در نظر گرفته شده است.
+            @Model.Question
         </div>
     </div>
     <div class="form-group">
         <label class="mr-1">پاسخ:</label>
         <div class="bg-light p-3 uk-border-rounded">
-            از آنجا که لورم ایپسوم، شباهت زیادی به متن های واقعی دارد، طراحان معمولا از لورم ایپسوم استفاده میکنند تا فقط به مشتری یا کار فرما نشان دهند که قالب طراحی شده بعد از اینکه متن در آن قرار میگرد چگونه خواهد بود و فونت ها و اندازه ها چگونه در نظر گرفته شده است.
+            @Model.Answer
         </div>
     </div>
 </div>
