--- a/GhasreMobile/Areas/Admin/Views/RegularQuestion/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/RegularQuestion/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblRegularQuestion>
 @{
     ViewData["Title"] = "سوالات";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -25,25 +25,31 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>23</td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
-                                        <a id="Information" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
-                                    </span>
-                                </td>
-                            </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.RegularQuestionId</td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
+                                            <a onclick="Information(@item.RegularQuestionId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                        </span>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
+                                            <a onclick="Edit(@item.RegularQuestionId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
+                                        </span>
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
             </div>
 
             <!--end list region-->
-            @*<div class="card-footer bg-white">
+            <div class="card-footer bg-white">
                     <nav aria-label="Page navigation example">
                         @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                     </nav>
-                </div>*@
+                </div>
         </div>
     </div>
 </div>
@@ -57,11 +63,20 @@
                 $(".modal-content").html(result);
             });
         });
-        $("#Information").click(function () {
+
+        function Edit(id) {
             $(".modal-content").html("");
-            $.get("/Admin/RegularQuestion/RegularQuestionInfo", function (result) {
+            $.get("/Admin/RegularQuestion/Edit/" + id, function (result) {
                 $(".modal-content").html(result);
             });
-        });
+        }
+
+
+        function Information(id) {
+            $(".modal-content").html("");
+            $.get("/Admin/RegularQuestion/RegularQuestionInfo/" + id, function (result) {
+                $(".modal-content").html(result);
+            });
+        }
     </script>
 }
