--- a/GhasreMobile/Areas/Admin/Views/SpecialOffer/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/SpecialOffer/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblSpecialOffer>
+
 @{
     ViewData["Title"] = "پیشنهاد ویژه";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -8,7 +9,7 @@
     <div class="col-md-12 flex-div pb-3 pt-3">
         <div class="card flex-div border-0 main-shadow">
             <div class="card-header bg-white">
-                
+
             </div>
             <div id="card-table" class="card-body flex-div">
                 <div class="table-responsive flex">
@@ -17,23 +18,26 @@
                             <tr>
                                 <th>نام محصول</th>
                                 <th>تاریخ انقضا</th>
-                                <th>درصد تخفیف</th>                                
-                                <th>عملیات</th>                                
+                                <th>درصد تخفیف</th>
+                                <th>عملیات</th>
                             </tr>
                         </thead>
                         <tbody>
 
-                            <tr>
-                                <td>سامسونگ A70</td>
-                                <td>1399</td>                                
-                                <td>30٪</td>                                                                
-                                <td>
-                                    
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
-                                        <a class="text-danger" uk-icon="trash-outline"></a>
-                                    </span>
-                                </td>
-                            </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.Product.Name</td>
+                                    <td>@item.ValidTill</td>
+                                    <td>@item.Discount٪</td>
+                                    <td>
+
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
+                                            <a onclick="Delete(@item.SpecialOfferId)" class="text-danger" uk-icon="trash-outline"></a>
+                                        </span>
+                                    </td>
+                                </tr>
+                            }
 
                         </tbody>
                     </table>
@@ -42,9 +46,19 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                    @*@await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                 </nav>
             </div>
         </div>
     </div>
 </div>
+
+@section Script{
+    <script>
+        function Delete(id) {
+            $.post("/Admin/SpecialOffer/Delete/" + id, function () {
+                window.location.reload();
+            });
+        }
+    </script>
+}
