--- a/GhasreMobile/Views/Shared/Components/BrandListView/BrandListView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/BrandListView/BrandListView.cshtml
@@ -2,6 +2,6 @@
 @foreach (var item in Model)
 {
     <li>
-        <a href="" class="link-text">@item.Name</a>
+        <a href="/Search?brandId=@item.BrandId" class="link-text">@item.Name</a>
     </li>
 }
