--- a/GhasreMobile/Views/Shared/Components/CategoryListView/CategoryListView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/CategoryListView/CategoryListView.cshtml
@@ -12,7 +12,7 @@
                 @foreach (var j in item.InverseParent)
                 {
                     <li>
-                        <a href="">@j.Name</a>
+                        <a href="/Search?catId=@j.CatagoryId">@j.Name</a>
                     </li>
 
                 }
