--- a/GhasreMobile/Views/Shared/_Ad.cshtml
+++ b/GhasreMobile/Views/Shared/_Ad.cshtml
@@ -1,7 +1,6 @@
-﻿@{
-    Random r = new Random();
-}
+﻿@model TblAd
 
-<a href="/" class="ad">
-    <img src="@($"/st/r/ads/a{r.Next(1,7)}.jpg")" alt="تبلیغات" />
+
+<a href="@Model.Link" title="" class="ad">
+    <img src="~/Images/Blogs/@Model.Image" alt="@Model.Label" />
 </a>
